<resources>
    <string name="app_name">Shielded</string>
    <string name="action_settings">Settings</string>
    <!-- Strings para el menu inicial -->
    <string name="menu_campana">Campaña (proximamente)</string>
    <string name="menu_partida">Partida Rápida</string>
    <string name="menu_vs">VS</string>
    <string name="menu_ajustes">Ajustes</string>
    <!-- Strings para el menu Partida Rapida -->
    <string name="match_title">SELECCIONA DIFICULTAD</string>
    <string name="match_easy">Facil</string>
    <string name="match_medium">Medio</string>
    <string name="match_hard">Dificil</string>

    <!-- Strings para el menu Seleccion de tamaño -->
    <string name="dimension_title">SELECCIONA TABLERO</string>

    <!-- Strings para el menu de VS -->
    <string name="new_match">CREAR NUEVA PARTIDA</string>

    <!-- Strings para el menu de Ajustes -->
    <string name="login_label">Usuario</string>
    <string name="login_edit">Introduce nick</string>
    <string name="passwd_label">Contraseña</string>
    <string name="passwd_edit">Introduce password</string>
    <string name="login">Iniciar sesión</string>
    <string name="select_photo">Abrir galeria</string>
    <string name="take_photo">Nueva foto</string>
    <string name="no_camera">No hay camara</string>

    <!-- Strings de notificaciones -->
    <string name="register_please">Regístrate para habilitar este modo</string>
    <string name="horizontal_cam">Saque la foto en apaisado (Horizontal)</string>
    <string name="void_user">Por favor, rellene los campos</string>
    <string name="wrong_user">Usuario o contraseña incorrectos</string>
    <string name="new_user">Usuario nuevo registrado</string>
    <string name="loged_user">¡Bienvenido de nuevo!</string>


    <!-- Otros -->
    <string name="menu_1vs1">1vs1</string>
    <string name="menu_online">Online</string>
    <string name="menu_bluetooth">Bluetooth (No disponible)</string>
    <string name="menu_facil">Fácil</string>
    <string name="menu_medio">Medio</string>
    <string name="menu_dificil">Difícil</string>
</resources>
