<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/yelmo">

    <!-- Info del jugador activo -->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="1">
        <!-- Nombre de usuario -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <!-- Foto de perfil -->
        <ImageView android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/user_pic"
            android:visibility="gone"/>
    </GridLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/match_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/bt_easy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/match_easy"
        android:onClick="selectIA" />

    <Button
        android:id="@+id/bt_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/match_medium"
        android:onClick="selectIA" />

    <Button
        android:id="@+id/bt_hard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/match_hard"
        android:onClick="selectIA" />

</LinearLayout>