<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/yelmo">

    <!-- Info del jugador activo -->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="8"
        android:rowCount="2">

        <!-- Foto de perfil -->
        <ImageView android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/user_pic"
            android:layout_columnSpan="2"
            android:layout_rowSpan="2"
            android:visibility="gone"/>
        <!-- Nombre de usuario -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_name"
            android:layout_columnSpan="4"
            android:layout_rowSpan="2"
            android:layout_gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

    </GridLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_1vs1"
        android:onClick="toTheme"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_online"
        android:onClick="toOnline"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_bluetooth"/>

</LinearLayout>